[gd_scene load_steps=8 format=3 uid="uid://b3s0v4nfhrk7b"]

[ext_resource type="Script" path="res://Scripts/opciones.gd" id="1_byqwm"]
[ext_resource type="FontFile" uid="uid://bwiwauajgf7lg" path="res://Fuentes/FatPix-SVG.ttf" id="2_gv4uo"]
[ext_resource type="PackedScene" uid="uid://c3tccnvr04hli" path="res://Assets/camara_movil.tscn" id="3_tw0rd"]
[ext_resource type="Material" uid="uid://nbdl4vgnhja5" path="res://Materiales/material_suelo.tres" id="4_ytowv"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dbced"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_uq4ec"]
sky_material = SubResource("ProceduralSkyMaterial_dbced")

[sub_resource type="Environment" id="Environment_3e5kg"]
background_mode = 2
sky = SubResource("Sky_uq4ec")
tonemap_mode = 2
glow_enabled = true

[node name="Opciones" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_byqwm")

[node name="BotonNormal" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 863.0
offset_top = 219.0
offset_right = 1063.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_gv4uo")
theme_override_font_sizes/font_size = 42
text = "Normal
"

[node name="BotonDificil" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 865.0
offset_top = 328.0
offset_right = 1065.0
offset_bottom = 379.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_gv4uo")
theme_override_font_sizes/font_size = 42
text = "Dificil
"

[node name="BotonConTiempo" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 836.0
offset_top = 581.0
offset_right = 1086.0
offset_bottom = 632.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_gv4uo")
theme_override_font_sizes/font_size = 42
text = "Con Tiempo
"

[node name="BotonSinTiempo" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 847.0
offset_top = 685.0
offset_right = 1083.0
offset_bottom = 736.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_gv4uo")
theme_override_font_sizes/font_size = 42
text = "Sin Tiempo
"

[node name="BotonVolver" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 863.0
offset_top = 852.0
offset_right = 1063.0
offset_bottom = 903.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_gv4uo")
theme_override_font_sizes/font_size = 42
text = "Volver
"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 780.0
offset_top = 112.0
offset_right = 1178.0
offset_bottom = 172.0
theme_override_colors/font_color = Color(0.112942, 0.446765, 0.313913, 1)
theme_override_fonts/font = ExtResource("2_gv4uo")
theme_override_font_sizes/font_size = 60
text = "DIFICULTAD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 765.0
offset_top = 467.0
offset_right = 1163.0
offset_bottom = 527.0
theme_override_colors/font_color = Color(0.112942, 0.446765, 0.313913, 1)
theme_override_fonts/font = ExtResource("2_gv4uo")
theme_override_font_sizes/font_size = 60
text = "TIEMPO"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3e5kg")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-1.54652e-08, 0.161259, 0.986912, 4.08842e-08, 0.986912, -0.161259, -1, 3.78552e-08, -2.18557e-08, 7.17254, 0, -1.69297)

[node name="camaraMovil" parent="." instance=ExtResource("3_tw0rd")]
transform = Transform3D(0.00963406, 0, 0.999954, 0, 1, 0, -0.999954, 0, 0.00963406, 4.6964, 1.15185, -1.668)

[node name="suelo" type="CSGBox3D" parent="."]
transform = Transform3D(-4.37114e-07, -10, 0, 10, -4.37114e-07, 0, 0, 0, 10, -3.14033, -0.06543, 0.158531)
use_collision = true
size = Vector3(4.10981, 0.043457, 4.3064)
material = ExtResource("4_ytowv")

[connection signal="pressed" from="BotonNormal" to="." method="_on_boton_normal_pressed"]
[connection signal="pressed" from="BotonDificil" to="." method="_on_boton_dificil_pressed"]
[connection signal="pressed" from="BotonConTiempo" to="." method="_on_boton_con_tiempo_pressed"]
[connection signal="pressed" from="BotonSinTiempo" to="." method="_on_boton_sin_tiempo_2_pressed"]
[connection signal="pressed" from="BotonVolver" to="." method="_on_boton_volver_pressed"]
